Wed Apr  9 09:49:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries): Fix typo in call to error (1 -> errno).

Tue Apr  8 23:02:22 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* error.h, error.c: Test for #ifdef __STDC__, not #if __STDC__.
	This is consistent with other parts of CVS; it means that the
	declaration for fperror will match the definition even if __STDC__
	is defined to 0 as the SunPro 4.0 compiler does.  Reported by
	Richard Smith <rjsmith@cisco.com>.

2 Apr 1997  Jim Kingdon

	* entries.c (ParseTag): Add "break;" after "default:" to avoid
	error from Visual C++.

Wed Apr  2 12:06:44 1997  Vince Del Vecchio  <vdelvecc@spd.analog.com>
			  and Jim Kingdon

	* client.c: In reporting errors from socket calls, use
 	SOCK_STRERROR and SOCK_ERRNO since strerror(errno) doesn't work
 	for Win32.

Tue Apr  8 10:45:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modules3): Add tests modules3-8 to modules3-11, to
	test for ability to supply a path to -d in modules.  Mostly
	commented out as CVS is buggy in this area.

Mon Apr  7 12:41:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Add comment about SEND_NO_CONTENTS.

Sun Apr  6 21:46:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (update): Add comment about noexec and SEND_NO_CONTENTS.

Sun Apr  6 17:34:08 1997  Robert Bihlmeyer  <robbe@orcus.priv.at>

	* Pass +f not f to getopt_long to prevent options from being
	permuted with glibc 2.0.1.

Sun Mar 30 00:07:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h (struct vers_ts): Adjust comment regarding ts_user.
	* server.c (serve_is_modified): New function.  Set entries to show
	that the file is modified but we don't know the contents.
	* server.c (requests): Add "Is-modified" request.
	* vers_ts.c (time_stamp_server): If the timestamp in entdata is
	"M" or "D", just copy that over into ts_user.
	* vers_ts.c (Version_TS): If timestamp is "D", use the entries